feat(swagger and types): improvements
